Removed <strong> from installation translations

--- a/languages/pl_pl/Settings/_Base.json
+++ b/languages/pl_pl/Settings/_Base.json
@@ -1,5 +1,6 @@
 {
   "php": {
+    "LBL_ATTENTION": "Uwaga!",
     "Allows you to Configure Cron Task": "Wywo\u0142uje okresowo kolejno zdefiniowane zadania w celu automatyzacji proces\u00f3w w systemie CRM.",
     "Configuration Editor": "Ustawienia",
     "EmailTemplate": "Szablony mailowe",
